bottom_up_example/exp.output
Grammar

    0 $accept: line $end

    1 line: expression

    2 expression: expression ADDOP term
    3           | term

    4 term: term MULOP factor
    5     | factor

    6 factor: '(' expression ')'
    7       | NUM


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 6
    ')' (41) 6
    error (256)
    NUM <ival> (258) 7
    ADDOP <op> (259) 2
    MULOP <op> (260) 4


Nonterminals, with rules where they appear

    $accept (8)
        on left: 0
    expression <ival> (9)
        on left: 2 3
        on right: 1 2 6
    term <ival> (10)
        on left: 4 5
        on right: 2 3 4
    factor <ival> (11)
        on left: 6 7
        on right: 4 5
    line (12)
        on left: 1
        on right: 0


State 0

    0 $accept: . line $end

    NUM  shift, and go to state 1
    '('  shift, and go to state 2

    expression  go to state 3
    term        go to state 4
    factor      go to state 5
    line        go to state 6


State 1

    7 factor: NUM .

    $default  reduce using rule 7 (factor)


State 2

    6 factor: '(' . expression ')'

    NUM  shift, and go to state 1
    '('  shift, and go to state 2

    expression  go to state 7
    term        go to state 4
    factor      go to state 5


State 3

    1 line: expression .
    2 expression: expression . ADDOP term

    ADDOP  shift, and go to state 8

    $default  reduce using rule 1 (line)


State 4

    3 expression: term .
    4 term: term . MULOP factor

    MULOP  shift, and go to state 9

    $default  reduce using rule 3 (expression)


State 5

    5 term: factor .

    $default  reduce using rule 5 (term)


State 6

    0 $accept: line . $end

    $end  shift, and go to state 10


State 7

    2 expression: expression . ADDOP term
    6 factor: '(' expression . ')'

    ADDOP  shift, and go to state 8
    ')'    shift, and go to state 11


State 8

    2 expression: expression ADDOP . term

    NUM  shift, and go to state 1
    '('  shift, and go to state 2

    term    go to state 12
    factor  go to state 5


State 9

    4 term: term MULOP . factor

    NUM  shift, and go to state 1
    '('  shift, and go to state 2

    factor  go to state 13


State 10

    0 $accept: line $end .

    $default  accept


State 11

    6 factor: '(' expression ')' .

    $default  reduce using rule 6 (factor)


State 12

    2 expression: expression ADDOP term .
    4 term: term . MULOP factor

    MULOP  shift, and go to state 9

    $default  reduce using rule 2 (expression)


State 13

    4 term: term MULOP factor .

    $default  reduce using rule 4 (term)
